[package]
name = "git-stats"
version = "0.1.0"
authors = ["Antony Raj <antony@francium.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version = "0.10", features = ["json", "blocking"]}
serde_json = "1.0"
failure = "0.1.6"
serde_derive = "1.0.104"
serde = "1.0.104"
